# chatgpt-backup-manager

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  archive.py  config.py  indexer.py  main.py  manager.py  models.py  utils.py
templates/: base.html  index.html  job.html  search.html
tests/: conftest.py  test_manager_restart.py
