[project]
name = "chatgpt-backup-manager"
version = "0.1.0"
description = "Web-based text UI for downloading, unpacking, and indexing ChatGPT backups"
readme = "README.md"
authors = [{name = "OpenAI Assistant"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
